--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ tasks.named('test') {
 }
 
 tasks.register('updateGitHooks', Copy) {
-    from './script/pre-commit'
+    from './scripts/pre-commit'
     into '.git/hooks'
 }
 
