--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ tasks.named('test') {
 
 tasks.register('updateGitHooks', Copy) {
     from './scripts/pre-commit'
-    into '.git/hooks'
+    into './.git/hooks'
 }
 
 compileJava.dependsOn updateGitHooks
